--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,6 @@
-Mavine(Naamen) Oyugi : mavine4512@gmail.com
-Diana Nyakundi : dianahkerrynyash@gmail.com
+# These individuals contributed to the hbnb project in this repository 
+
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+Mavine Oyugi <mavineoyugi@gmail.com>
+Diana Nyakundi <dianahkerrynyash@gmail.com>
